# Irlen

./: .gitignore  README.md  gitignore  pyproject.toml
irlen/: __main__.py
irlen/chunking/: service.py
irlen/embed/: service.py
irlen/essay_generator/: body_paragraph.py  controller.py  intro.py  summary.py
irlen/paragraph_generator/: service.py
irlen/question_generator/: service.py
irlen/source_scraping/: service.py
resources/: RitzerMcDonaldization.txt
