[tool.poetry]
name = "irlen"
version = "0.1.0"
description = ""
authors = ["Irlen Turlykhanov <irlen.turlykhanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.17"
langchain-core = "^0.3.33"
langchain-text-splitters = "^0.3.5"
langchain-openai = "^0.3.3"
chromadb = "^0.6.3"
langchain-community = "^0.3.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
